--- a/lab2/static/style.css
+++ b/lab2/static/style.css
@@ -4,6 +4,9 @@
 	padding: 20px;
 	font-size: 1rem;
 	margin-top: 0;
+    border-bottom: 10px solid lightgray;
+    position: sticky;
+    top: 0;
 }
 h1 {
 	color: black;
@@ -12,6 +15,13 @@ h1 {
 }
 * {
 	font-family: "Courier";
+}
+.header {
+    background-color: black;
+    padding: 1rem 0;
+    border-bottom: 10px solid lightgray;
+    position: sticky;
+    top: 0;
 }
 html {
 	height: 100%;
@@ -56,7 +66,7 @@ p {
 {
 	z-index: -1;
 	content: "";
-	background-image: url("/images/SSO_onWhite.png");
+	background-image: url("/lab2/images/SSO_onWhite.png");
 	background-repeat: no-repeat;
 	background-size: 50%;
 	background-position: center;
@@ -117,4 +127,23 @@ th, td {
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
+.main-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.main-menu ul li{
+    display: inline;
+    margin-right: 0.625rem;
+}
+.main-menu ul li a {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.main-menu ul li:last-child {
+    margin-right: 0;
 }
